// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonFlexStripes renders a list of three stripes 1`] = `
<Flex
  className="skeleton__flex-stripes skeleton__flex-stripes--padded"
>
  <FlexItem
    className="skeleton__flex-stripes__item"
    key="skeleton-0"
  >
    <SkeletonStripe
      customStyle={
        Object {
          "height": "1em",
          "width": "200px",
        }
      }
    />
  </FlexItem>
  <FlexItem
    className="skeleton__flex-stripes__item"
    key="skeleton-1"
  >
    <SkeletonStripe
      customStyle={
        Object {
          "height": "1em",
          "width": "200px",
        }
      }
    />
  </FlexItem>
  <FlexItem
    className="skeleton__flex-stripes__item"
    key="skeleton-2"
  >
    <SkeletonStripe
      customStyle={
        Object {
          "height": "1em",
          "width": "200px",
        }
      }
    />
  </FlexItem>
</Flex>
`;

exports[`SkeletonFlexStripes renders a padded list of stripes 1`] = `
<Flex
  className="skeleton__flex-stripes skeleton__flex-stripes--padded"
>
  <FlexItem
    className="skeleton__flex-stripes__item"
    key="skeleton-0"
  >
    <SkeletonStripe
      customStyle={
        Object {
          "height": "1em",
          "width": "200px",
        }
      }
    />
  </FlexItem>
  <FlexItem
    className="skeleton__flex-stripes__item"
    key="skeleton-1"
  >
    <SkeletonStripe
      customStyle={
        Object {
          "height": "1em",
          "width": "200px",
        }
      }
    />
  </FlexItem>
</Flex>
`;
